<resources>
    <string name="app_name">Deliverino</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Phone</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This phone is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_activity_map">Map</string>
    <string name="old_password">Old Password</string>
    <string name="new_password">New Password</string>
    <string name="re_enter">Re Enter</string>
    <string name="edit">Edit</string>
    <string name="phone">Phone ...</string>
    <string name="problem">problem</string>
    <string name="send">Send</string>
    <string name="status">Status</string>
    <string name="select_date">Select Date</string>
    <string name="all">All</string>
    <string name="who_are_we">who are we ?</string>
    <string name="mechanism_of_action">Mechanism of Action.</string>
    <string name="restaurants">Restaurants</string>
    <string name="check_near_restaurants">Check near restaurants</string>
    <string name="requests">Requests</string>
    <string name="check_restaurants_requests">Check restaurants requests .</string>
    <string name="reports">Reports</string>
    <string name="call">Call</string>
    <string name="check_your_reports">Check your reports</string>
    <string name="call_customers_service">Call customers service</string>
    <string name="accept">Accept</string>
    <string name="receipt">Receipt</string>
    <string name="delivered">Delivered</string>
    <string name="delete">Delete</string>
    <string name="terms">Terms</string>
    <string name="communicate">Communicate</string>
    <string name="customers_service">Customers service</string>
    <string name="complaints">Complaints</string>
    <string name="logout">Logout</string>
    <string name="failer_str">failer</string>
    <string name="kfljvnbjgcnbk">Edit password .</string>
    <string name="kfkbnkfnvikfnvbkl">Loading...</string>
    <string name="kjkfbvnfnvjhf">Edit phone .</string>
    <string name="udfdhsvhjdfvhr">Error !</string>
    <string name="dskskxgvfhudsbfvh">Loading...</string>
    <string name="kjdfbvkjndfjkbvnfgvjae">Inputs Error</string>
    <string name="iujkdfngjdrfjfsegfewr">Enter a valid phone address .</string>
    <string name="iixxfvdfngjnoesifkwe">Between 4 and 10 alphanumeric characters</string>
    <string name="kjfbbvkjdffieajsiofsriu">No Internet Connection</string>
    <string name="asd1">Edit phone</string>
    <string name="asd2">Edit Password</string>
    <string name="asd3">Conditions and Terms</string>
    <string name="asd4">Customer service</string>
    <string name="asd5">Problems</string>
    <string name="asd6">Reports</string>
    <string name="asd7">Requests</string>
</resources>
